--- a/src/main/resources/db/changelog/init-script.yml
+++ b/src/main/resources/db/changelog/init-script.yml
@@ -24,6 +24,7 @@ databaseChangeLog:
                                type:  varchar(32)
                                constraints:
                                    nullable:  false
+                                   unique:    true
                         -  column:
                                name:   id_type
                                type:   varchar(20)
