--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3.8"
 services:
-  test-service:
-    depends_on:
-    - test-postgres
-    image: "ghcr.io/hide-tech/test:latest"
-    container_name: "test-service"
-    ports:
-      - 9001:9001
-      - 8001:8001
-    environment:
-      - BPL_JVM_THREAD_COUNT=50
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://test-postgres:5432/test_db
-      - BPL_DEBUG_ENABLED=true
-      - BPL_DEBUG_PORT=8001
+#  test-service:
+#    depends_on:
+#    - test-postgres
+#    image: "ghcr.io/hide-tech/test:latest"
+#    container_name: "test-service"
+#    ports:
+#      - 9001:9001
+#      - 8001:8001
+#    environment:
+#      - BPL_JVM_THREAD_COUNT=50
+#      - SPRING_DATASOURCE_URL=jdbc:postgresql://test-postgres:5432/test_db
+#      - BPL_DEBUG_ENABLED=true
+#      - BPL_DEBUG_PORT=8001
   test-postgres:
     image: "postgres:14.4"
     container_name: "test-postgres"
