feat: added integration test, some refactor

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,13 @@ spring:
     properties:
       hibernate:
         format-sql: true
+  api-docs:
+    path: /openapi.json
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    operationsSorter: method
 
 logging:
   pattern:
