changed workflow file

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,7 +28,7 @@ jobs:
           ./gradlew build
   package:
     name: Package and Publish
-    needs: [ build, native ]
+    needs: [ build ]
     runs-on: ubuntu-22.04
     permissions:
       contents: read
